# mug

./: .gitignore  .readthedocs.yml  MANIFEST.in  PLAN_multiplayer_refactor.md  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  scratch.py  setup.py  update_pypi.sh
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.10-MILESTONE-AUDIT.md  v1.12-MILESTONE-AUDIT.md  v1.13-MILESTONE-AUDIT.md  v1.16-MILESTONE-AUDIT.md  v1.17-MILESTONE-AUDIT.md  v1.18-MILESTONE-AUDIT.md  v1.19-MILESTONE-AUDIT.md  v1.2-INTEGRATION-CHECK.md  v1.2-MILESTONE-AUDIT.md  v1.20-MILESTONE-AUDIT.md  v1.21-MILESTONE-AUDIT.md  v1.22-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md  v1.8-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
.planning/archive/: v1-p2p-multiplayer-COMPLETE.md
.planning/backlog/: GGPO-PARITY.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.11-MILESTONE-AUDIT.md  (+6 more)
docs/: MANUAL_TEST_PROTOCOL.md  conf.py  index.md  index.rst  multiplayer-sync-optimization.html  multiplayer-sync-optimization.md  multiplayer_pyodide_implementation.md  multiplayer_state_sync_api.md  participant-exclusion.md  requirements.txt  server-authoritative-architecture.md  server-frame-aligned-stepper.md
scripts/: validate_action_sequences.py
tests/: conftest.py  validate_action_sequences.py  validate_v2_determinism.py
(+770 files in other folders)
